--- a/MVVM_Intro/Views/CustomerView.xaml
+++ b/MVVM_Intro/Views/CustomerView.xaml
@@ -3,13 +3,25 @@
               xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml" 
               xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006" 
               xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
+              xmlns:local="clr-namespace:MVVM_Intro.ViewModel"
               mc:Ignorable = "d" 
               d:DesignHeight = "500" d:DesignWidth = "500">
 
 
-  <Grid >
-    <StackPanel HorizontalAlignment = "Center">
+  <!--<UserControl.DataContext>
+    <local:MainWindowViewModel />
+  </UserControl.DataContext>-->
 
+  
+
+  <UserControl.Resources>
+    <BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
+  </UserControl.Resources>
+  
+  
+
+  <Grid >
+    <StackPanel >
 
       <ItemsControl ItemsSource="{Binding Customers}" >
         
@@ -17,6 +29,8 @@
           <DataTemplate>
             
             <StackPanel Orientation = "Horizontal" Margin="3 5 3 5">
+             
+              <Button Content="Delete" Command="{Binding DeleteCommand}" Margin="5 5 5 5" Visibility="{Binding ButtonVisibility, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource booleanToVisibilityConverter}}"  />
               <Label Content="First name:"></Label>
               <TextBox Text = "{Binding FirstName, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                         Width = "100" Margin = "3 5 3 5"/>
@@ -26,6 +40,7 @@
               <Label Content="Full name:"></Label>
               <TextBlock Text = "{Binding FullName, Mode = OneWay}" 
                         Margin = "0 5 3 5"/>
+              
 
               <!--<Button Content="Click here!" Width="70" Height="20" Command="{Binding X}" />-->
 
